logs/django-iadmin.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_iadmin-0.1.11.egg-info'...
Listing './lib/python3.5/site-packages/iadmin'...
Listing './lib/python3.5/site-packages/iadmin/fixtures'...
Compiling './lib/python3.5/site-packages/iadmin/options.py'...
***   File "./lib/python3.5/site-packages/iadmin/options.py", line 645
    except NoReverseMatch, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/iadmin/sites.py'...
***   File "./lib/python3.5/site-packages/iadmin/sites.py", line 294
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/iadmin/static'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/css'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/img'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/img/gis'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/img/mime'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/img/mime/png'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/img/nojs'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/img/nojs/chrome'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/img/nojs/firefox'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/img/nojs/ie'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/img/nojs/invalid'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/img/nojs/opera'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/js'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/js/wymeditor'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/js/wymeditor/iframe'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/js/wymeditor/iframe/default'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/js/wymeditor/lang'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/js/wymeditor/plugins'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/js/wymeditor/plugins/embed'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/js/wymeditor/plugins/fullscreen'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/js/wymeditor/plugins/hovertools'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/js/wymeditor/plugins/resizable'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/js/wymeditor/plugins/tidy'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/js/wymeditor/skins'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/js/wymeditor/skins/compact'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/js/wymeditor/skins/default'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/js/wymeditor/skins/minimal'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/js/wymeditor/skins/silver'...
Listing './lib/python3.5/site-packages/iadmin/static/iadmin/js/wymeditor/skins/twopanels'...
Listing './lib/python3.5/site-packages/iadmin/templates'...
Listing './lib/python3.5/site-packages/iadmin/templates/iadmin'...
Listing './lib/python3.5/site-packages/iadmin/templates/iadmin/admin'...
Listing './lib/python3.5/site-packages/iadmin/templates/iadmin/auth'...
Listing './lib/python3.5/site-packages/iadmin/templates/iadmin/auth/user'...
Listing './lib/python3.5/site-packages/iadmin/templates/iadmin/charts'...
Listing './lib/python3.5/site-packages/iadmin/templates/iadmin/edit_inline'...
Listing './lib/python3.5/site-packages/iadmin/templates/iadmin/filters'...
Listing './lib/python3.5/site-packages/iadmin/templates/iadmin/guardian'...
Listing './lib/python3.5/site-packages/iadmin/templates/iadmin/guardian/model'...
Listing './lib/python3.5/site-packages/iadmin/templates/iadmin/includes'...
Listing './lib/python3.5/site-packages/iadmin/templates/iadmin/registration'...
Listing './lib/python3.5/site-packages/iadmin/templatetags'...
Compiling './lib/python3.5/site-packages/iadmin/tools.py'...
***   File "./lib/python3.5/site-packages/iadmin/tools.py", line 69
    except Error, e:
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
